--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,6 +1,5 @@
 name: CI-CD EKS Deployment
 
-
 on:
   push:
     branches: ["master"]
@@ -9,8 +8,13 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
 
+    env:
+      AWS_REGION: eu-north-1
+      ECR_REPOSITORY: hello-yaswanth
+      DEPLOYMENT_NAME: hello-yaswanth
+
     steps:
-      - name: Checkout code
+      - name: Checkout source
         uses: actions/checkout@v3
 
       - name: Configure AWS credentials
@@ -18,25 +22,32 @@ jobs:
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: ${{ secrets.AWS_REGION }}
+          aws-region: eu-north-1
 
-      # ✅ Fixed login step
       - name: Login to Amazon ECR
         run: |
-          LOGIN_PASSWORD=$(aws ecr get-login-password --region ${{ secrets.AWS_REGION }})
-          echo "$LOGIN_PASSWORD" | docker login --username AWS --password-stdin ${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.${{ secrets.AWS_REGION }}.amazonaws.com
+          aws ecr get-login-password --region eu-north-1 \
+          | docker login --username AWS --password-stdin \
+          ${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.eu-north-1.amazonaws.com
 
       - name: Build Docker image
         run: docker build -t hello-yaswanth .
 
       - name: Tag Docker image
-        run: docker tag hello-yaswanth:latest ${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.${{ secrets.AWS_REGION }}.amazonaws.com/${{ secrets.ECR_REPOSITORY }}:latest
+        run: |
+          docker tag hello-yaswanth:latest \
+          ${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.eu-north-1.amazonaws.com/hello-yaswanth:latest
 
       - name: Push Docker image
-        run: docker push ${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.${{ secrets.AWS_REGION }}.amazonaws.com/${{ secrets.ECR_REPOSITORY }}:latest
+        run: |
+          docker push \
+          ${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.eu-north-1.amazonaws.com/hello-yaswanth:latest
 
       - name: Update kubeconfig
-        run: aws eks update-kubeconfig --region ${{ secrets.AWS_REGION }} --name ${{ secrets.EKS_CLUSTER_NAME }}
+        run: |
+          aws eks update-kubeconfig \
+          --region eu-north-1 \
+          --name ${{ secrets.EKS_CLUSTER_NAME }}
 
       - name: Restart Kubernetes deployment
         run: kubectl rollout restart deployment hello-yaswanth
