--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -12,7 +12,6 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    # Checkout repository
     - name: Checkout source code
       uses: actions/checkout@v3
 
@@ -24,45 +23,46 @@ jobs:
         aws-secret-access-key: ${{ secrets.AWS_SECRET_KEY }}
         aws-region: eu-north-1
 
-    # Login to ECR
     - name: Login to Amazon ECR
       run: |
         aws ecr get-login-password --region eu-north-1 \
         | docker login --username AWS --password-stdin 946774551819.dkr.ecr.eu-north-1.amazonaws.com
 
-    # Build Docker image
     - name: Build Docker image
       run: |
         docker build -t node-hello:${{ github.run_number }} .
 
-    # Tag Docker image
     - name: Tag image
       run: |
         docker tag node-hello:${{ github.run_number }} \
         946774551819.dkr.ecr.eu-north-1.amazonaws.com/node-hello:${{ github.run_number }}
 
-    # Push image to ECR
     - name: Push image
       run: |
         docker push 946774551819.dkr.ecr.eu-north-1.amazonaws.com/node-hello:${{ github.run_number }}
 
-    # Configure kubectl for EKS
     - name: Configure kubeconfig
       run: |
         aws eks --region eu-north-1 update-kubeconfig --name yaswanth-cluster
 
-    # Deploy new image to Kubernetes
     - name: Deploy application
       run: |
         kubectl set image deployment/hello-yaswanth \
         hello-container=946774551819.dkr.ecr.eu-north-1.amazonaws.com/node-hello:${{ github.run_number }}
 
-    # Wait for rollout
     - name: Verify rollout
       run: |
         kubectl rollout status deployment/hello-yaswanth --timeout=180s
 
-    # Rollback if deployment fails
+    # ✅ Configure credentials again for rollback
+    - name: Configure AWS credentials for rollback
+      if: failure()
+      uses: aws-actions/configure-aws-credentials@v3
+      with:
+        aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY }}
+        aws-secret-access-key: ${{ secrets.AWS_SECRET_KEY }}
+        aws-region: eu-north-1
+
     - name: Rollback deployment if failed
       if: failure()
       run: |
