--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -11,8 +11,13 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
 
+    env:
+      AWS_REGION: ${{ secrets.AWS_REGION }}
+      AWS_ACCOUNT_ID: ${{ secrets.AWS_ACCOUNT_ID }}
+      ECR_REPOSITORY: ${{ secrets.ECR_REPOSITORY }}
+      EKS_CLUSTER_NAME: ${{ secrets.EKS_CLUSTER_NAME }}
+
     steps:
-    # Checkout code
     - name: Checkout source code
       uses: actions/checkout@v3
 
@@ -20,44 +25,47 @@ jobs:
     - name: Configure AWS credentials
       uses: aws-actions/configure-aws-credentials@v3
       with:
-        aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-        aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-        aws-region: eu-north-1
+        aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY }}
+        aws-secret-access-key: ${{ secrets.AWS_SECRET_KEY }}
+        aws-region: ${{ secrets.AWS_REGION }}
 
     # Login to ECR
     - name: Login to Amazon ECR
       run: |
-        aws ecr get-login-password --region eu-north-1 \
-        | docker login --username AWS --password-stdin 946774551819.dkr.ecr.eu-north-1.amazonaws.com
+        aws ecr get-login-password --region $AWS_REGION \
+        | docker login --username AWS \
+        --password-stdin $AWS_ACCOUNT_ID.dkr.ecr.$AWS_REGION.amazonaws.com
 
     # Build Docker image
     - name: Build Docker image
       run: |
-        docker build -t node-hello:${{ github.run_number }} .
+        docker build -t $ECR_REPOSITORY:${{ github.run_number }} .
 
     # Tag image
-    - name: Tag image
+    - name: Tag Docker image
       run: |
-        docker tag node-hello:${{ github.run_number }} \
-        946774551819.dkr.ecr.eu-north-1.amazonaws.com/node-hello:${{ github.run_number }}
+        docker tag $ECR_REPOSITORY:${{ github.run_number }} \
+        $AWS_ACCOUNT_ID.dkr.ecr.$AWS_REGION.amazonaws.com/$ECR_REPOSITORY:${{ github.run_number }}
 
     # Push image
-    - name: Push image to ECR
+    - name: Push Docker image
       run: |
-        docker push 946774551819.dkr.ecr.eu-north-1.amazonaws.com/node-hello:${{ github.run_number }}
+        docker push \
+        $AWS_ACCOUNT_ID.dkr.ecr.$AWS_REGION.amazonaws.com/$ECR_REPOSITORY:${{ github.run_number }}
 
     # Configure kubectl
     - name: Configure kubeconfig
       run: |
-        aws eks --region eu-north-1 update-kubeconfig --name yaswanth-cluster
+        aws eks --region $AWS_REGION \
+        update-kubeconfig --name $EKS_CLUSTER_NAME
 
-    # Deploy new image
+    # Deploy new version
     - name: Deploy application
       run: |
         kubectl set image deployment/hello-yaswanth \
-        hello-container=946774551819.dkr.ecr.eu-north-1.amazonaws.com/node-hello:${{ github.run_number }}
+        hello-container=$AWS_ACCOUNT_ID.dkr.ecr.$AWS_REGION.amazonaws.com/$ECR_REPOSITORY:${{ github.run_number }}
 
-    # Verify deployment & rollback if failed
+    # Verify deployment & rollback
     - name: Verify deployment & rollback if failed
       run: |
         echo "Checking rollout status..."
@@ -70,8 +78,8 @@ jobs:
           echo "========== POD STATUS =========="
           kubectl get pods -o wide
 
-          echo "========== FAILED POD =========="
-          FAILED_POD=$(kubectl get pods --field-selector=status.phase!=Running \
+          FAILED_POD=$(kubectl get pods \
+            --field-selector=status.phase!=Running \
             -o jsonpath="{.items[0].metadata.name}")
 
           echo "Failed pod: $FAILED_POD"
@@ -85,9 +93,9 @@ jobs:
           echo "========== RECENT EVENTS =========="
           kubectl get events --sort-by=.lastTimestamp | tail -20
 
-          echo "Rolling back to previous stable deployment..."
+          echo "Rolling back deployment..."
           kubectl rollout undo deployment/hello-yaswanth
 
-          echo "Rollback completed successfully. Old version restored."
+          echo "Rollback completed successfully."
           exit 1
         fi
