--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -11,19 +11,12 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
 
-    env:
-      AWS_REGION: ${{ secrets.AWS_REGION }}
-      AWS_ACCOUNT_ID: ${{ secrets.AWS_ACCOUNT_ID }}
-      ECR_REPOSITORY: ${{ secrets.ECR_REPOSITORY }}
-      EKS_CLUSTER_NAME: ${{ secrets.EKS_CLUSTER_NAME }}
-
     steps:
-    # Checkout source code
+    # Checkout code
     - name: Checkout source code
       uses: actions/checkout@v3
 
     # Configure AWS credentials
-    
     - name: Configure AWS credentials
       uses: aws-actions/configure-aws-credentials@v3
       with:
@@ -31,38 +24,37 @@ jobs:
         aws-secret-access-key: ${{ secrets.AWS_SECRET_KEY }}
         aws-region: ${{ secrets.AWS_REGION }}
 
-    # Login to Amazon ECR (fixed)
+    # Login to ECR
     - name: Login to Amazon ECR
       run: |
-        aws ecr get-login-password --region $AWS_REGION | docker login --username AWS --password-stdin $AWS_ACCOUNT_ID.dkr.ecr.$AWS_REGION.amazonaws.com
+        aws ecr get-login-password --region "${{ secrets.AWS_REGION }}" | docker login --username AWS --password-stdin "${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.${{ secrets.AWS_REGION }}.amazonaws.com"
 
     # Build Docker image
     - name: Build Docker image
       run: |
-        docker build -t $ECR_REPOSITORY:${{ github.run_number }} .
+        docker build -t "${{ secrets.ECR_REPOSITORY }}:${{ github.run_number }}" .
 
     # Tag Docker image
     - name: Tag Docker image
       run: |
-        docker tag $ECR_REPOSITORY:${{ github.run_number }} \
-        $AWS_ACCOUNT_ID.dkr.ecr.$AWS_REGION.amazonaws.com/$ECR_REPOSITORY:${{ github.run_number }}
+        docker tag "${{ secrets.ECR_REPOSITORY }}:${{ github.run_number }}" \
+        "${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.${{ secrets.AWS_REGION }}.amazonaws.com/${{ secrets.ECR_REPOSITORY }}:${{ github.run_number }}"
 
     # Push Docker image
     - name: Push Docker image
       run: |
-        docker push \
-        $AWS_ACCOUNT_ID.dkr.ecr.$AWS_REGION.amazonaws.com/$ECR_REPOSITORY:${{ github.run_number }}
+        docker push "${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.${{ secrets.AWS_REGION }}.amazonaws.com/${{ secrets.ECR_REPOSITORY }}:${{ github.run_number }}"
 
     # Configure kubeconfig
     - name: Configure kubeconfig
       run: |
-        aws eks --region $AWS_REGION update-kubeconfig --name $EKS_CLUSTER_NAME
+        aws eks --region "${{ secrets.AWS_REGION }}" update-kubeconfig --name "${{ secrets.EKS_CLUSTER_NAME }}"
 
     # Deploy application
     - name: Deploy application
       run: |
         kubectl set image deployment/hello-yaswanth \
-        hello-container=$AWS_ACCOUNT_ID.dkr.ecr.$AWS_REGION.amazonaws.com/$ECR_REPOSITORY:${{ github.run_number }}
+        hello-container="${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.${{ secrets.AWS_REGION }}.amazonaws.com/${{ secrets.ECR_REPOSITORY }}:${{ github.run_number }}"
 
     # Verify deployment & rollback if failed
     - name: Verify deployment & rollback if failed
@@ -70,9 +62,9 @@ jobs:
         echo "Checking rollout status..."
 
         if kubectl rollout status deployment/hello-yaswanth --timeout=180s; then
-          echo "Deployment successful. Old pods removed safely."
+          echo "Deployment successful. Old pods safely removed."
         else
-          echo "Deployment failed. Gathering error details..."
+          echo "Deployment failed. Collecting details..."
 
           echo "========== POD STATUS =========="
           kubectl get pods -o wide
